Add some logic&style

--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Data-*</title>
   <link rel="stylesheet" href="./assets/css/style.css">
   <script defer src="./assets/js/index.js"></script>
 </head>
 
 <body>
+  <p class="title">flex-direction</p>
+  <button class="uppercase btn" data-color='row'>row</button>
+  <button class="uppercase btn" data-color='row-reverse'>row-reverse</button>
+  <button class="uppercase btn" data-color='column'>column</button>
+  <button class="uppercase btn" data-color='column-reverse'>column-reverse</button>
+
+  <div id="container">
+    <div class="container-wrap">
+      <div class="container-box">1</div>
+      <div class="container-box">2</div>
+      <div class="container-box">3</div>
+      <div class="container-box">4</div>
+    </div>
+  </div>
 
 </body>
 
