--- a/index.html
+++ b/index.html
@@ -11,20 +11,26 @@
 </head>
 
 <body>
-  <p class="title">flex-direction</p>
-  <button class="uppercase btn" data-color='row'>row</button>
-  <button class="uppercase btn" data-color='row-reverse'>row-reverse</button>
-  <button class="uppercase btn" data-color='column'>column</button>
-  <button class="uppercase btn" data-color='column-reverse'>column-reverse</button>
+  <div>
+    <section>
+      <p class="title">flex-direction</p>
+      <button class="uppercase btn" data-flex='row'>row</button>
+      <button class="uppercase btn" data-flex='row-reverse'>row-reverse</button>
+      <button class="uppercase btn" data-flex='column'>column</button>
+      <button class="uppercase btn" data-flex='column-reverse'>column-reverse</button>
 
-  <div id="container">
-    <div class="container-wrap">
-      <div class="container-box">1</div>
-      <div class="container-box">2</div>
-      <div class="container-box">3</div>
-      <div class="container-box">4</div>
-    </div>
+      <div class="container">
+        <div class="container-wrap">
+          <div class="container-box">1</div>
+          <div class="container-box">2</div>
+          <div class="container-box">3</div>
+          <div class="container-box">4</div>
+        </div>
+      </div>
+    </section>
+
   </div>
+
 
 </body>
 
